--- a/styles.css
+++ b/styles.css
@@ -24,15 +24,11 @@ header {
 img {
     width: 120px;
     height: 80px;
-    margin: 9px auto;
     padding: 5px auto 3px 8px;
 
 }
 
-.title-text-block{
-    padding: 2px 10px;
-    font-size: 20px;
-}
+
 
 .component-menu-list{
     display: flex;
@@ -43,22 +39,29 @@ img {
 .menu-item {
     padding: 2px 10px;
     display: flex;
-    font-size: 40px;
+    font-size: 55px;
+    font-family: "Alumni Sans", sans-serif;
+    font-weight: weight;
+    font-style: normal;
+    text-align: center;
 }
 
 a {
     text-decoration: none;
     padding: 2px 10px;
     color: aliceblue;
+    text-shadow: 4px 1px 2px rgb(232, 158, 192);
+
 }
 
 a:hover {
-    background-color: rgb(238, 198, 218);
     border-radius: 5px;
+    box-shadow: 0px 5px 10px 0px rgba(215, 64, 147, 0.2);
 }
 
 .images-us {
     display: flex;
+    justify-content: center;
 }
 
 .images-us li div img {
@@ -70,14 +73,89 @@ a:hover {
     margin: 10px;
 }
 
+main .menu-about-us {
+    margin: 5px 120px auto 140px;
+    text-align: center;
+}
+
+main .menu-about-us ul {
+    margin: 5px 120px auto 120px;
+}
+
+main .menu-about-us p {
+    font-size: 32px;
+}
+
+main .menu-about-us li {
+    font-family: "Alumni Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
+    font-size: 22px;
+}
+
+svg {
+    width: 28px;
+    height: 28px;
+    padding-top: 11px;
+}
+
+.about-us-p {
+    display: flex;
+    justify-content: center;
+}
+
 
 h1{
     text-align: center;
     color: aliceblue;
+    font-family: "Philosopher", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 45px;
+    text-shadow: 4px 1px 2px rgb(232, 158, 192);
+}
+
+p {
+    text-align: center;
+    margin: 5px;
+    font-family: "Alumni Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
+    font-size: 22px;
+}
+
+h2 {
+    text-align: center;
+    margin: 5px;
+    color: aliceblue;
+    font-family: "Philosopher", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 38px;
+    text-shadow: 4px 1px 2px rgb(232, 158, 192);
+}
+
+h3 {
+    text-align: center;
+    margin: 5px;
+    color: aliceblue;
+    font-family: "Philosopher", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 32px;
+    text-shadow: 4px 1px 2px rgb(232, 158, 192);
+}
+
+#izg {
+    width: 300px;
+    height: 400px;
+    margin-top: 70px;
 }
 
 .menu-one {
-    margin: 50px 0 auto 0;
+    margin: 20px 0 auto 0;
     width: 100%;
     padding:100px 0 0 0;
 }
@@ -106,7 +184,7 @@ main section .menu-type {
 
 main li img {
     width: 300px;
-    height: 280px;
+    height: 300px;
     object-fit: cover;
 }
 
@@ -118,18 +196,42 @@ main li img {
     overflow: hidden;
 }
 
-li:nth-of-type(9) {
+li:nth-of-type(7) {
     grid-column: 1 / span 2;
 }
 
-
-.education {
+main section .price-images {
     text-align: center;
+    padding-bottom: 18px;
+}
+
+main section .price-images img {
+    width: 480px;
+    height: 700px;
+    border-radius: 8px;
+    margin: 10px;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
 footer {
     background: linear-gradient(70deg, rgb(231, 173, 204), rgb(248, 168, 219));
     box-shadow: 0px -5px 10px 0px rgba(0, 0, 0, 0.2);
+}
+
+footer .footer-div {
+    display: flex;
+    justify-content: center;
+}
+
+footer .footer-div svg {
+    margin-top: 14px;
+    color: aliceblue;
+}
+
+footer p {
+    font-size: 50px;
+    color: aliceblue;
+    text-shadow: 4px 1px 2px rgb(232, 158, 192);
 }
 
 footer ul {
@@ -143,6 +245,6 @@ footer ul li {
 }
 
 footer ul li img {
-    width: 200px;
-    height: 200px;
+    width: 120px;
+    height: 120px;
 }
